alpha-codegen/src/snapshots/alpha_codegen__scheduledc__tests__empty_schedule_text_is_rejected_as_illegal_for_prefix_sum.snap
---
source: alpha-codegen/src/scheduledc.rs
expression: e.to_string()
---
illegal schedule: 'Y__reduce' reads 'Y__init' but the schedule doesn't guarantee the producer instance runs strictly before the consumer instance that reads it (§7.2)
