alpha-codegen/src/snapshots/alpha_codegen__scheduledc__tests__piecewise_equation_renders_as_a_guard_selected_ternary_chain.snap
---
source: alpha-codegen/src/scheduledc.rs
expression: render_stmts(rendered)
---
void test(void) {
	long i = i0;
	Y(i) = (N >= 11) ? (X(i)) : (((X(i)) + (X(i))));
}
