alpha-codegen/src/snapshots/alpha_codegen__scheduledc__tests__reduce_external_combiner.snap
---
source: alpha-codegen/src/scheduledc.rs
expression: render_reduce_pair(REDUCE_EXTERNAL)
---
// Y__init
void test(void) {
	long i = i0;
	Y(i) = 0.0f;
}
// Y__reduce
void test(void) {
	long i = i0;
	long j = i1;
	Y(i) = delta(Y(i), X(j));
}
