alpha-codegen/src/snapshots/alpha_codegen__scheduledc__tests__reduce_min.snap
---
source: alpha-codegen/src/scheduledc.rs
expression: render_reduce_pair(REDUCE_MIN)
---
// Y__init
void test(void) {
	long i = i0;
	Y(i) = INFINITY;
}
// Y__reduce
void test(void) {
	long i = i0;
	long j = i1;
	Y(i) = min(Y(i), X(j));
}
