alpha-codegen/src/snapshots/alpha_codegen__scheduledc__tests__reduce_plus_baseline.snap
---
source: alpha-codegen/src/scheduledc.rs
expression: render_reduce_pair(PREFIX_SUM)
---
// Y__init
void test(void) {
	long i = i0;
	Y(i) = 0.0f;
}
// Y__reduce
void test(void) {
	long i = i0;
	long j = i1;
	Y(i) = (Y(i)) + (X(j));
}
